objects/ssot__SalesTerritoryAccountScore__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceName__c</fullName>
        <label>Data Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Sales Territory Account Score Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RankNumber__c</fullName>
        <label>Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SalesTerritoryId__c</fullName>
        <label>Territory</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ScoreExplainabilityInfoText__c</fullName>
        <label>Score Explainability Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ScoreOriginName__c</fullName>
        <label>Score Origin Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SnoozeUntilDate__c</fullName>
        <label>Snooze Until Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__TotalScoreNumber__c</fullName>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1752800779694_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesTerritoryAccountScore_AccountId_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>SalesTerritoryAccountScore_AccountId_rel</relationshipLabel>
        <relationshipName>rel_1752800779694_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1752800795389_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesTerritoryAccountScore_SalesTerr_rel</label>
        <referenceTo>ssot__SalesTerritory__dlm</referenceTo>
        <relationshipLabel>SalesTerritoryAccountScore_SalesTerr_rel</relationshipLabel>
        <relationshipName>rel_1752800795389_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>